[package]
name = "sdf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
clap = { version = "4.1", features = ["derive"] }
sdf-common = { path = "../sdf-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["full", "signal"] }
poem = "1.3.59"
poem-openapi = { version = "3.0.6", features = ["swagger-ui"] }
config-file = { version = "0.2.3", features = ["yaml"] }
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "sdf"
path = "src/main.rs"
